syntax = "proto3";
option java_multiple_files = true;

package proto.dtos;

import "google/protobuf/timestamp.proto";
import "dtos/usuario.proto";

message CrearEventoSolidarioProto {
	string nombre = 1;
	string descripcion = 2;
	google.protobuf.Timestamp fechaHora = 3;
	repeated MiembroProto miembros = 4;
}

message ModificarEventoSolidarioProto {
	string nombre = 1;
	google.protobuf.Timestamp fechaHora = 2;
	repeated MiembroProto miembros = 3;
}